<resources>
    <string name="app_name">解忧杂货店</string>

    <!-- 顶部标题 -->
    <string name="text_top_bar">解忧杂货店</string>

    <!-- 导航栏提示文字 -->
    <string name="tab_menu_firstpage">首页</string>
    <string name="tab_menu_mailbox">信箱</string>
    <string name="tab_menu_user">我的</string>
    <string name="tab_menu_write">写信</string>

    <!-- 导航栏frame layout测试文字 -->
    <string name="frame_layout_first_page">FirstPage</string>
    <string name="frame_layout_mailbox">Mailbox</string>
    <string name="frame_layout_user">User</string>
    <string name="frame_layout_write">Write</string>

</resources>
